<resources>
    <string name="app_name">MyTimi</string>
    <string name="today_pay">本月消费</string>
    <string name="today_income">本月收入</string>
    <string name="number100">100.00</string>
    <string name="income">收入</string>
    <string name="pay">支出</string>
    <string name="moneyString">3.00</string>
    <string name="moneyFlag">￥</string>
    <string name="cakeString">点心</string>
    <string name="confirm">确定</string>

    <string name="date">2018年12月13日</string>
    <string name="remark">备注</string>

    <string name="author">com.jianjian.android.mytimi.provider</string>
    <string name="common">一般</string>
</resources>
