<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEEEE"
    tools:context="com.jianjian.android.mytimi.activity.addOrderActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/income_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:padding="4dp"
            android:layout_marginEnd="6dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/pay_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="6dp"
            android:padding="4dp"
            android:text="@string/pay"/>
    </LinearLayout>


    <GridLayout
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        >
        <ImageView
            android:id="@+id/selected_img"

            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center|start"
            android:layout_marginStart="6dp"
            android:src="@drawable/ic_drink"/>


        <TextView
            android:layout_columnWeight="3"
            android:id="@+id/selected_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="12dp"
            tools:text="一般"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/moneyFlag"/>
        <EditText
            android:id="@+id/money_edit"
            android:layout_columnWeight="0.3"
            android:hint="@string/moneyString"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            />
    </GridLayout>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/icon_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />

</LinearLayout>
