<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorPrimary">
            <ImageButton
                android:id="@+id/back_btn"
                android:layout_marginStart="14dp"
                android:layout_gravity="center|start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:background="@null"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remark"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>
            <!--<TextView-->
            <!--android:id="@+id/confirm_text"-->
            <!--android:layout_gravity="center|end"-->
            <!--android:text="@string/confirm"-->
            <!--android:textColor="#FFFFFF"-->
            <!--android:textSize="18sp"-->
            <!--android:layout_marginEnd="14dp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"/>-->
        </FrameLayout>
        <TextView
            android:id="@+id/date_text"
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date"/>
        <EditText
            android:id="@+id/content_edit"
            android:paddingTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm"
            android:gravity="top"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:layout_gravity="bottom">
        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            >
            <ImageView
                android:id="@+id/photo_img"
                android:src="@drawable/ic_add_photo"
                android:layout_width="48dp"
                android:layout_gravity="start|center"
                android:layout_height="48dp"
                />
            <Button
                android:id="@+id/confirm_btn"
                android:text="@string/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                />
        </FrameLayout>

    </ScrollView>
</FrameLayout>