<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jianjian.android.mytimi.MainActivity">

    <ImageView
        android:background="@color/colorAccent"
        android:layout_width="0dp"
        android:layout_height="160dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/today_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/today_income"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:text="@string/number100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_income"
        android:id="@+id/textView2"/>
    <com.jianjian.android.mytimi.View.MainCycleView
        android:id="@+id/add_order_image_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:startPoint="0"
        app:cycleWidth="10"
        app:animationLength="2000"
        app:endPoint="360"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView"
        android:layout_marginTop="115dp"/>

    <TextView
        android:id="@+id/today_pay"
        android:text="@string/today_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"/>
    <TextView
        android:text="@string/number100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_income"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/order_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="4dp"/>

</android.support.constraint.ConstraintLayout>
